fix(css): alignment issues

--- a/ui/src/css/q-calendar.sass
+++ b/ui/src/css/q-calendar.sass
@@ -43,15 +43,12 @@
 
   &__left
     text-align: left !important
-    justify-content: flex-start !important
 
   &__center
     text-align: center !important
-    justify-content: center !important
 
   &__right
     text-align: right !important
-    justify-content: flex-end !important
 
   &__justify
     justify-content: space-between !important
